// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CarStatusField /> matches snapshot 1`] = `
<select
  class="sc-iqAbSa kItNyh"
  id="carStatusField"
  name="name"
  type="text"
>
  <option
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="yes"
  >
    tak
  </option>
  <option
    value="no"
  >
    nie
  </option>
</select>
`;

exports[`<CarStatusField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <select
        class="sc-iqAbSa ebhXIE"
        id="carStatusField"
        label="Test"
        name="name"
        required=""
        type="text"
      >
        <option
          disabled=""
          value="select"
        >
          wybierz *
        </option>
        <option
          value="yes"
        >
          tak
        </option>
        <option
          value="no"
        >
          nie
        </option>
      </select>
      <span
        class="sc-jrsJCI djVSvf"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<CarStatusField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <label
        for="name"
      >
        Test
      </label>
      <select
        class="sc-iqAbSa kItNyh"
        id="carStatusField"
        label="Test"
        name="name"
        type="text"
      >
        <option
          disabled=""
          value="select"
        >
          wybierz 
        </option>
        <option
          value="yes"
        >
          tak
        </option>
        <option
          value="no"
        >
          nie
        </option>
      </select>
    </div>
  </form>
</div>
`;

exports[`<CarStatusField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <select
        class="sc-iqAbSa ebhXIE"
        id="carStatusField"
        name="name"
        type="text"
      >
        <option
          disabled=""
          value="select"
        >
          wybierz 
        </option>
        <option
          value="yes"
        >
          tak
        </option>
        <option
          value="no"
        >
          nie
        </option>
      </select>
      <span
        class="sc-jrsJCI djVSvf"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;
